# libqi-release

./: 0001-Adapt-upstream-for-melodic.patch  0002-Add-extra-cmake-rules-for-libqi.patch  0003-Remove-downgrade-to-gnu-11.patch  0004-Remove-unnecessary-CMakeLists-changes.patch  0005-Adding-ka-to-the-installed-directories.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: build.yml  ros2.yml
cmake/: libqi-extras.cmake.em
debian/: changelog  control  copyright  gbp.conf  rules
melodic/: package.xml
qi/: macro.hpp
rpm/: ros-galactic-naoqi-libqi.spec  ros-iron-naoqi-libqi.spec  ros-kilted-naoqi-libqi.spec  ros-melodic-naoqi-libqi.spec  ros-rolling-naoqi-libqi.spec  template.spec
src/: eventloop.cpp
src/messaging/: servicedirectoryclient.cpp  sessionservice.cpp  transportserverasio_p.cpp
src/messaging/sock/: socketwithcontext.hpp
tests/: CMakeLists.txt
tests/ka/: CMakeLists.txt
